--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
         <table>
             <tr>
-                <td><img style="float:left;"width="200" src="IMAGES/tarunpic.jpg" alt="tarun's pic">
+                <td><img style="float:left;"width="200" src="tarunpic.jpg" alt="tarun's pic">
             </td>
                 <td><h1>tarun khangarot's resume</h1>
                     <p><i>professional 💪gym trainer</i></p>
